--- a/Projekat WT/Kontakt.html
+++ b/Projekat WT/Kontakt.html
@@ -44,29 +44,32 @@
 	<h2>Registracija</h2>
 	
 	<form method="POST" action="Naslovna.html">
-				
-		<p id="unos">
+		
+		<div id="unos">
+		<p >
 				<input type="text" name="ime" placeholder="Korisničko ime" required>
 		</p>
 		
-		<p id="unos">
+		<p >
 				<input type="password" name="prezime" placeholder="Šifra" required>
 		</p>
-		<p id="unos">
+		<p >
 				<input type="password" name="password" placeholder="Ponovi šifru" required>
 		</p>
 		
-		<p id="unos">
+		<p >
 				<input type="email" name="email" placeholder="E-Mail" required>
 		</p>
 		
-		<p id="unos">
+		<p >
 				<input type="date" name="datum" placeholder="Datum rođenja - dd/mm/yyyy" required>
 		</p>
 		
-		<p id="unos">
+		<p >
 				<input type="tel" name="broj telefona" placeholder="Broj telefona">
 		</p>
+		
+		</div>
 		
 		<p id="dugme">
 			<label>
