--- a/Projekat WT/Tabela.html
+++ b/Projekat WT/Tabela.html
@@ -44,69 +44,26 @@
 	<h2>Tabelarni podaci</h2>
 	
 	<table>
-		<th>
-			ID Korisnika
-		</th>
-		
-		<th>
-			Ime
-		</th>
-		
-		<th>
-			Prezime
-		</th>
-		
-		<th>
-			Broj Oglasa
-		</th>
-		
-		<th>
-			Pouzdanost
-		</th>
-		
 		<tr>
-			<td>
-				a
-			</td>
-			
-			<td>
-				a
-			</td>
-			
-			<td>
-				a
-			</td>
-			
-			<td>
-				a
-			</td>
-			
-			<td>
-				a
-			</td>
-			
-		</tr>
+			<th>
+				ID Korisnika
+			</th>
 		
-		<tr id="plavi">
-			<td>
-				a
-			</td>
-			
-			<td>
-				a
-			</td>
-			
-			<td>
-				a
-			</td>
-			
-			<td>
-				a
-			</td>
-			
-			<td>
-				a
-			</td>
+			<th>
+				Ime
+			</th>
+		
+			<th>
+				Prezime
+			</th>
+		
+			<th>
+				Broj Oglasa
+			</th>
+		
+			<th>
+				Pouzdanost
+			</th>
 		</tr>
 		
 		<tr>
@@ -132,7 +89,52 @@
 			
 		</tr>
 		
-		<tr id="plavi">
+		<tr class="plavi">
+			<td>
+				a
+			</td>
+			
+			<td>
+				a
+			</td>
+			
+			<td>
+				a
+			</td>
+			
+			<td>
+				a
+			</td>
+			
+			<td>
+				a
+			</td>
+		</tr>
+		
+		<tr>
+			<td>
+				a
+			</td>
+			
+			<td>
+				a
+			</td>
+			
+			<td>
+				a
+			</td>
+			
+			<td>
+				a
+			</td>
+			
+			<td>
+				a
+			</td>
+			
+		</tr>
+		
+		<tr class="plavi">
 			<td>
 				a
 			</td>
