Finalna verzija za predaju

--- a/Projekat WT/Kontakt.html
+++ b/Projekat WT/Kontakt.html
@@ -13,8 +13,11 @@
 
 <header>
 	
+	<div id="naslov">
 	<h1>Mijenjaj.ba</h1>
 	
+	</div>
+	<div id="oklop">
 	<div class="okvir">
 
 		<div class="krug1"></div>
@@ -25,6 +28,7 @@
 		<div class="d"></div>
 		<div class="krug2"></div>
 	
+	</div>
 	</div>
 	
 	<nav>
